# crispy-robot

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/lib/: CommandButtons.svelte  Controller.svelte  CraneCommand.ts  CraneModel.ts  Viewer.svelte  crane.ts
src/: main.rs
